# simple-veo-prompt-generator

./: ANTI_CARTOONISH_FIXES.md  README.md  config.py  prd.md  pyproject.toml  ui.py
.cursor/rules/: uv.mdc
agents/: __init__.py  orchestrator.py
models/: __init__.py
session_manager/: __init__.py
templates/: veoprompt.md.j2
