[project]
name = "veoprompt-pro"
version = "1.0.0"
description = "An Agentic Video Prompt Engineering System for AI video generation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.3.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "streamlit>=1.46.0",
]

[project.optional-dependencies]
dev = ["black>=23.0.0", "ruff>=0.1.0", "mypy>=1.7.0", "pytest>=7.0.0"]
